2008-04-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/amrnb/amrnbparse.c: (gst_amrnbparse_loop):
	  We should also stop the streaming task when we get a NOT_LINKED
	  flow return, which is not covered by FLOW_IS_FATAL.

2008-04-11  Julien Moutte  <julien@fluendo.com>

	* gst/mpegaudioparse/gstxingmux.c: (generate_xing_header): Fix
	argument formats.

2008-04-06  Sebastian Dröge  <slomo@circular-chaos.org>

        Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

        * configure.ac:
        Actually build dlls when cross-compiling with mingw32.
        Fixes bug #526247.

2008-04-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(mpeg_audio_seek_entry_free):
	* gst/mpegaudioparse/gstxingmux.c: (gst_xing_seek_entry_free):
	Depend on GLib 2.12 and use it unconditionally as we do in other
	modules too already.

2008-04-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(mpeg_audio_seek_entry_new), (mpeg_audio_seek_entry_free),
	(gst_mp3parse_reset), (gst_mp3parse_emit_frame):
	* gst/mpegaudioparse/gstxingmux.c: (gst_xing_seek_entry_new),
	(gst_xing_seek_entry_free), (gst_xing_mux_finalize), (xing_reset),
	(gst_xing_mux_chain):
	Use GSlice for allocating the seek table entries if we compile with
	GLib 2.10 or newer.

2008-04-01  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/asfdemux/gstasfdemux.c:
	(gst_asf_demux_process_ext_stream_props):
	Remove some debug code.

2008-04-01  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/asfdemux/gstasfdemux.c:
	(gst_asf_demux_process_ext_stream_props):
	Guard against division by 0 and fall back to 25/1 framerate.

2008-04-01  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_add_video_stream),
	(gst_asf_demux_process_ext_stream_props):
	Instead of adding a fixes 25/1 framerate to the video caps, use the